# ai-playground

./: .editorconfig  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
gpt-2/: README.md
gpt-2/gpt_2/: train.py
playground/: simplest-nn.ipynb
playground/deep-learning-with-python/: gradient-tape-second-order-gradient.py  gradient-tape-watch.py  gradient-tape.py  linear-classification-tensorflow-multiple.py  linear-classification-tensorflow.py  nn-from-scratch-tf.ipynb
playground/generative-deep-learning/: README.md  autoencoder-2.ipynb  autoencoder.ipynb  first-nn-convolution-2.ipynb  first-nn-convolution-3.ipynb  first-nn-convolution.ipynb  first-nn.ipynb  variable-autoencoder.ipynb
playground/mathematics-for-machine-learning/lineal-algebra/: scalar-and-vectors.ipynb
playground/micrograd/: README.md  derivative-of-func-with-multiple-inputs.ipynb  derivative-of-simple-func.ipynb  micrograd.ipynb  neuron-use.py  neuron.ipynb  neuron.py  pytorch-version.ipynb  value-obj-1.ipynb  value-obj-2.ipynb  value-obj-3.ipynb  value-obj-4.ipynb  value-obj-5.ipynb  value-obj-6.ipynb  value-obj.ipynb
playground/ml-for-coders/: simplest-nn.ipynb
playground/wiki-rag/: index.py
