[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Pablo Rosales <me@pablorosales.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
sentence-transformers = "^3.0.1"
wikipedia-api = "^0.6.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wiki-rag = "playground.wiki-rag.index:main"
